2008-03-26  David Hyatt  <hyatt@apple.com>

        Make the Ahem font antialias correctly on Acid3.

        Reviewed by Dan

        * platform/graphics/SimpleFontData.h:
        * platform/graphics/mac/FontMac.mm:
        (WebCore::Font::drawGlyphs):
        * platform/graphics/mac/SimpleFontDataMac.mm:
        (WebCore::SimpleFontData::platformInit):
        * platform/graphics/win/FontCGWin.cpp:
        (WebCore::Font::drawGlyphs):
        * platform/graphics/win/SimpleFontDataCGWin.cpp:
        (WebCore::SimpleFontData::platformInit):

2008-03-26  Mark Rowe  <mrowe@apple.com>

        Fix the Mac build.

        * WebCore.xcodeproj/project.pbxproj:  Copy the newly generated header into the right place.

2008-03-26  Adam Roben  <aroben@apple.com>

        Fix Bug 17768: REGRESSION (r30146): Inspector no longer shows elements
        properties

        <http://bugs.webkit.org/show_bug.cgi?id=17768>

        We were throwing an exception from Object.describe because of some
        undefined variables.

        Reviewed by Tim Hatcher.

        * page/inspector/utilities.js:
        (Object.describe): Reinstate the type1 and type2 variables that were
        removed in r30146. They're still used when formatting a function.

2008-03-26  Eric Seidel  <eric@webkit.org>

        Reviewed by darin.

        Forgot to add braces darin asked for during review.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::write):

2008-03-26  Eric Seidel  <eric@webkit.org>

        Reviewed by darin.

        Fix, makes us pass Test 70
        XML documents should be strict about encoding checks
        http://bugs.webkit.org/show_bug.cgi?id=17079

        Test: fast/encoding/invalid-xml.html

        * WebCore.base.exp:
        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::write):
        * loader/CachedFont.cpp:
        (WebCore::CachedFont::ensureSVGFontData):
        * loader/TextResourceDecoder.cpp: